# couriertls

./: AUTHORS  GNUmakefile.am  README.md  argparse.c  argparse.h  autogen.sh  ax_pkg_rpath.m4  ax_random_src.m4  configure.ac  libcouriergnutls.c  libcouriertls.c  starttls.c  tlscache.c
liblock-mini/: GNUmakefile.am  Makefile.am  ax_fcntl_lock.m4  ax_flock.m4  ax_lockf.m4  ax_locktest.m4  configure.ac  liblock.h  liblock_config.h.in  lockfcntl.c  lockflock.c  locklockf.c
numlib/: GNUmakefile.am  changeuidgid.c  configure.ac  numlib.h
numlib-mini/: atotimet.c  atouidt.c  configure.ac  numlib.h  strdevt.c  strgidt.c  strhdevt.c  strhinot.c  strhpidt.c  strhtimet.c  strinot.c  strofft.c  strpidt.c  strsize.c  strsizet.c  strtimet.c  struidt.c
random128-mini/: configure.ac
soxwrap/: Makefile.am
